# hydra

./: CMakeLists.txt  LICENSE  README.md  README_SOURCE.md  conanfile.txt  test
docs/: index.html
docs/book/: intro.html
docs/doc/: intro.html  lang.html
hydra/: lang.hd
include/: expressions.hpp  init.hpp  interpreter.hpp  libltdl  ltdl.h  operations.hpp  types.hpp  utils.hpp  vals.hpp
include/expressions/: accessor.hpp  concurrency.hpp  contract.hpp  data.hpp  exception.hpp  foreign.hpp  handler.hpp  io.hpp  language.hpp  message.hpp  mirror.hpp  module.hpp  network.hpp  object.hpp  oobject.hpp  operation.hpp  parent.hpp  runtime.hpp  symbol.hpp  user_object.hpp
include/expressions/data/: bitvec.hpp  bool.hpp  byte.hpp  char.hpp  cons.hpp  ctypes.hpp  cvals.hpp  number.hpp  parent.hpp  string.hpp  struct.hpp  tuple.hpp  union.hpp  vector.hpp
include/interpreter/: continuation.hpp  exception.hpp  garbage.hpp  runtime.hpp
include/operations/: arithmetic.hpp  concurrency.hpp  conditions.hpp  data.hpp  dev.hpp  ffi.hpp  foreign.hpp  io.hpp  language.hpp  logic.hpp  mirror.hpp  modules.hpp  network.hpp  operator.hpp  system.hpp  types.hpp
include/types/: basic.hpp  class.hpp  contract.hpp  fn.hpp  type.hpp
scripts/: windows-inno-script.iss
src/: CMakeLists.txt  lang.cpp  main.cpp  utils.cpp  vals.cpp
src/expressions/: CMakeLists.txt  accessor.cpp  concurrency.cpp  cons.cpp  foreign.cpp  genericfn.cpp  handler.cpp  input_output.cpp  ivy_cons.cpp  ivy_object.cpp  ivy_oper.cpp  ivy_symbol.cpp  ivy_values.cpp  lexical_scope.cpp  mirror.cpp  module.cpp  network.cpp  object.cpp  oobject.cpp  oper.cpp  runtime.cpp  symbol.cpp  user_object.cpp  user_oper.cpp  value.cpp  values.cpp
src/expressions/concurrency/: mutex.cpp
src/expressions/data/: bool.cpp  char.cpp  cons.cpp  ctypes.cpp  cvals.cpp  number.cpp  parent.cpp  string.cpp  tuple.cpp  union.cpp  vector.cpp
src/expressions/io/: input_output.cpp  network.cpp
src/init/: CMakeLists.txt  lang.cpp  loop.cpp  modules.cpp  operators.cpp  parent.cpp
src/interpreter/: CMakeLists.txt  garbage.cpp  lexical_scope.cpp  roots.cpp  runtime.cpp
src/memory/: CMakeLists.txt  control.cpp  garbage.cpp  roots.cpp
src/operations/: CMakeLists.txt  arithmetic.cpp  concurrency.cpp  conditions.cpp  cvals.cpp  data.cpp  dev.cpp  foreign.cpp  input_output.cpp  language.cpp  logic.cpp  mirror.cpp  module.cpp  network.cpp  object.cpp  operator.cpp  read.cpp  symbol.cpp  system.cpp  types.cpp
src/operations/data/: adt.cpp  cons.cpp  data.cpp  object.cpp  string.cpp  vector.cpp
src/operations/io/: input_output.cpp  network.cpp
src/types/: CMakeLists.txt  any.cpp  array.cpp  char.cpp  class.cpp  cons.cpp  derives.cpp  fn.cpp  gen_fn.cpp  initialize.cpp  integer.cpp  is.cpp  list.cpp  mac.cpp  make_type.cpp  module.cpp  nil.cpp  object.cpp  stream.cpp  string.cpp  symbol.cpp  tuple.cpp  type.cpp  type_eql.cpp  types.cpp  vector.cpp
