
add_library(operations OBJECT
                       data/data.cpp
                       data/string.cpp
                       data/vector.cpp
                       data/adt.cpp

                       object.cpp
                       mirror.cpp
                       arithmetic.cpp
                       operator.cpp
                       conditions.cpp
                       concurrency.cpp
                       dev.cpp
                       foreign.cpp
                       input_output.cpp
                       language.cpp
                       logic.cpp
                       module.cpp
                       read.cpp
                       symbol.cpp
                       types.cpp)
                       
