
add_library(operations OBJECT
                       data/data.cpp
                       data/string.cpp
                       data/vector.cpp
                       data/adt.cpp

                       arithmetic.cpp
                       concurrency.cpp
                       conditions.cpp
                       dev.cpp
                       foreign.cpp
                       input_output.cpp
                       language.cpp
                       logic.cpp
                       mirror.cpp
                       module.cpp
                       network.cpp
                       object.cpp
                       operator.cpp
                       read.cpp
                       symbol.cpp
                       types.cpp)
                       
