
add_library(operations OBJECT
                       data/data.cpp
                       data/string.cpp
                       data/vector.cpp
                       data/adt.cpp

                       io/input_output.cpp
                       io/network.cpp

                       arithmetic.cpp
                       concurrency.cpp
                       conditions.cpp
                       dev.cpp
                       foreign.cpp
                       language.cpp
                       logic.cpp
                       mirror.cpp
                       module.cpp
                       object.cpp
                       operator.cpp
                       read.cpp
                       symbol.cpp
                       types.cpp)
                       
