
add_library(types OBJECT cons.cpp
                         integer.cpp
                         any.cpp
                         mac.cpp
                         list.cpp
                         derives.cpp
                         tuple.cpp
                         nil.cpp
                         type.cpp
                         gen_fn.cpp
                         module.cpp
                         stream.cpp
                         char.cpp
                         string.cpp
                         is.cpp
                         symbol.cpp
                         fn.cpp
                         vector.cpp)
