
add_library(types OBJECT cons.cpp
                         initialize.cpp
                         any.cpp
                         mac.cpp
                         list.cpp
                         derives.cpp
                         tuple.cpp
                         nil.cpp
                         type.cpp
                         gen_fn.cpp
                         stream.cpp
                         is.cpp
                         fn.cpp
                         vector.cpp)
